site.css
/* myStyle.css */

:root {
  --black: #fff;
  --white: #333;
  --red: #f00;
  --cadetblue: #5f9ea0;
  --dimgrey: #c6c6c6;
  --green: #16d2a2;
  --blue: #728091;
  --lips: #f7acb2;
}

html,
body {
  margin: 0;
  background-color: var(--white);
  color: var(--black);
  width: 100%;
  height: 100%;
}

h1 {
  color: var(--white);
  background-color: var(--black);
  padding: 20px;
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  border: 0 solid var(--black);
  margin-top: 50px;
}

h2 {
  color: var(--white);
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  margin-bottom: 5px;
  margin-top: 50px;
}

h3 {
  display: inline-block;
  color: var(--black);
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  margin-top: 5px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

p {
  font-family: 'Open Sans', sans-serif;
  color: var(--dimgrey);
  text-align: left;
  font-weight: 400;
  padding: 5px 20px 10px 20px;
  line-height: 1.6em;
  max-width: 800px;
}

a {
  color: var(--cadetblue);
  text-decoration: none;
}

ul {
  font-family: 'Open sans', sans-serif;
  color: var(--white);
  background-color: var(--black);
}

li {
  margin-top: 10px;
  font-size: 14px;
}

#logo {
  margin-top: 50px;
}

#logo img {
  width: 60%;
}

.subtitle {
  text-align: center;
  padding-top: 0;
  padding-bottom: 10px;
  margin: 0;
  border: 0 solid var(--black);
  font-style: italic;
}

.p-centered {
  text-align: center;
  background-color: solid var(--black);
  color: var(--white);
  padding: 30px;
  border: 1px solid var(--white);
}

@media (max-width: 767px) {
  [id='#logo'] img {
    width: 80%;
  }
}

.EFCAlogo {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 50px;
  margin-bottom: 50px;
  width: 100px;
}

.topnav {
  overflow: hidden;
  background-color: var(--black);
  font-family: 'Open Sans', sans-serif;
  font-size: 12px;
    width: 100%;
    position: fixed;
}

.topnav a {
  float: left;
  color: var(--white);
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

.topnav a:hover {
  background-color: var(--dimgrey);
  color: var(--black);
}

.topnav a.active {
  background-color: var(--lips);
  color: var(--black);
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 30%;
}

.centerlodging {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  overflow: hidden;
}


/* HERO WRAPPER */

.hero-wrapper {
  display: flex;
  background-color: var(--black);
  width: 100%;
  flex-flow: row;
  align-content: center;
  align-items: center;
  justify-content: center;
  border: solid 0px red;
  flex-wrap: wrap;
  margin-top: 0px;
  margin-bottom: 0px;
}

/* Hero */
.hero {
  order: 1;
  flex-grow: 1;
  min-width: 350px;
  background-image: url('http://jackasstheology.com/wp-content/uploads/2019/05/katie_macdiarmid_headshot.jpg');
  height: 100vh;
  background-position: center;
  background-size: cover;
}

.hero-text {
    order: 2;
    flex-grow: 1;
    border: 0px solid red;
    min-height: 400px;
    min-width: 425px;
}

@media (max-width: 768px) {
  .hero-text {
    margin-top: 100px;
  }
}

.hero-text h1 {
    margin-top: 0px;
}

.hero-text .p-centered {
    margin: auto 5%;
    min-width: 200px;
}

.content {
  order: 3;
  flex-grow: 1;
  max-width: 400px;
  text-align: center;
  margin-top: 0;
  margin-left: auto;
  margin-right: auto;
  border: solid 0 var(--red);
}
@media (min-width: 768px) {
  .content {
    width: 45%;
    min-width: 400px;
  }
}


/*SKILLS*/

.skills-wrapper {
    display: flex;
    flex-wrap: wrap;
    border: 0px solid var(--red);
}

.skills-wrapper ul {
    background-color: var(--white);
}
.wrapper-dates {
  padding: 0;
  margin: 0;
  width: 100%;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  align-content: center;
}

.skillstitle {
    order: 0;
    width: 100%;
    background-color: var(--white);
    color: white;
}


.flex-item {
  flex: 10%;
  list-style: none;
  min-width: 150px;
  max-width: 250px;
  margin: 5vh 3vw;
  padding: 10px;
  text-align: center;
  background-color: var(--white);
  border: 1px solid var(--black);
  color: var(--black);
  text-align: center;
}

.flex-item p {
    text-align: center;
    color: var(--black);
    
}


/* LEADERSHIP */


.leadership-wrapper {
    display:flex;
    width: 100%;
    border: 0px solid var(--red);
    margin-top: 0px;
    margin-bottom: 0px;
    background-color: var(--black);
    flex-wrap: wrap;
    align-content: center;
    min-height: 400px;
}

.leadership-title {
    order: 0;
    width: 100%;
    text-align: center;
    margin-top: 0px;
    margin-bottom: 0px;
    border: 0px solid var(--red);
    display:
}

.leadership-list {
    order: 2;
    width: 100%;
    background-color: var(--black);
    color: var(--white);
    margin-left: auto;
    margin-right: auto;
    margin-top: 0px;
    max-width: 400px;
  border: 0px solid var(--red);
}


/*EXPERIENCE*/
.experience-wrapper {
    display:flex;
    width: 100%;
    border: 1px solid var(--green)OFF;
    margin-top: 0px;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

#experience {
    order: -3;
    width: 100%;
    margin-top: 0px;
    background-color: var(--white);
    color: var(--black);
}

.job-title {
    color: var(--black);
    font-weight: 600;
    margin: auto;
}

.job-subtitle {
    font-weight: 300;
    Font-size: 16px;
    font-style: oblique;
}

.date {
    font-weight: 300;
    Font-size: 16px;
    font-style: oblique;
}

.experience-list {
    margin: auto;
    max-width: 350px;
    background-color: var(--white);
    color: var(--black);
}

.job {
    width: 33%;
    min-width: 400px;
    min-height: 400px;
    flex-grow: 50%;
    display: block;
    border: 0px solid red;
}

.job-1 {
    order: 4;
    
}
.job-2 {
    order: 1;
}
.job-3 {
    order: 3;
}
.job-4 {
    order: 2;
}
.date {
    margin-top: 20%;
}

.job-title {
    
}

.job-subtitle {
    
}

/*EDUCATION*/
.education-wrapper {
    display:flex;
    width: 100%;
    border: 0px solid var(--red);
    margin-top: 0px;
    margin-bottom: 0px;
    background-color: var(--black);
    flex-wrap: wrap;
    align-content: center;
    min-height: 300px;
}

.education-main-title {
    order: 1; 
    width: 100%;
    text-align: center;
    min-width: 400px;
    flex-grow: 50%;
    display: block;
    border: 0px solid red;
    border: 0px solid var(--red);

}
.education {
    order: 2;
    width: 100%;
}

.education-title {
    order: 2;
    color: var(--white);
    font-weight: 600;
    margin: auto;
    
}

.education-subtitle {
    order: 3;
    color: var(--white);
    font-weight: 300;
    Font-size: 16px;
    font-style: oblique;
}

.education-date {
    order: 4;
    color: var(--white);
    font-weight: 300;
    Font-size: 16px;
    font-style: oblique;
}


/*CONTACT*/

.contact-wrapper {
    display:flex;
    width: 100%;
    border: 0px solid var(--green)OFF;
    margin-top: 0px;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    background-color: var(white);
}

#contact {
    background-color: var(--white);
    color: var(--black);
    width: 100%;
}

.contact-info {
    background-color: var(--white);
    color: var(--black);
    width: 100%;
}

.contact-info li {
    list-style-type: none;
    text-align: center;
    
}
.icon-list {
    list-style-type: none;
}

